[package]
name = "enonfungibletokens"
version = "0.0.1"
authors = [ "dorin-iancu <dorin.iancu@elrond.com>","hhoareau@gmail.com"]
edition = "2018"
publish=false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.19.0"
features = ["derive"]


[dependencies.elrond-wasm-node]
version = "0.19.0"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.19.0"
