[package]
name = "enonfungibletokens"
version = "0.0.1"
authors = [ "hhoareau@gmail.com",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"


[dependencies.elrond-wasm]
version = "0.30.0"

[dependencies.elrond-wasm-node]
version = "0.30.0"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.30.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"