[package]
name = "e-non-fungible-tokens-abi"
version = "0.0.0"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"
publish = false

[dependencies.e-non-fungible-tokens]
path = ".."

[dependencies.elrond-wasm]
version = "0.14.2"

[dependencies.elrond-wasm-debug]
version = "0.14.2"
