[package]
name = "enonfungibletokens-wasm"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = [ "cdylib",]


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"


[dependencies.enonfungibletokens]
features = [ "wasm-output-mode",]
default-features = false
path = ".."

[dependencies.elrond-wasm-output]
version = "0.19.0"
features = [ "wasm-output-mode",]

[workspace]
members = ["."]