[package]
name = "enonfungibletokens-wasm"
version = "0.0.1"
edition = "2018"
publish=false
authors = [ "hhoareau@gmail.com",]

[lib]
crate-type = [ "cdylib",]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.enonfungibletokens]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.30.0"

[dependencies.elrond-wasm-output]
version = "0.30.0"
features = [ "wasm-output-mode"]

[workspace]
members = ["."]